--- a/radiomarusyafm.html
+++ b/radiomarusyafm.html
@@ -13,7 +13,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@canary"></script>
     <ul>
-     <video controls="" autoplay="" name="media"><source src="http://live.radio7.su:9000/marusya_256" type="audio/aac"></video>
+     <video controls="" autoplay="" name="media"><source src="https://www.liveradio.es/http://live.radio7.su:9000/marusya_256" type="audio/aac"></video>
           <a href='index.html' target='_blank'>Home</a> <br>
         
     </ul>
