--- a/radiomarusyafm.html
+++ b/radiomarusyafm.html
@@ -16,7 +16,8 @@
     <ul>
      <video controls="" autoplay="" name="media"><source src="https://www.liveradio.es/http://live.radio7.su:9000/marusya_256" type="audio/aac"></video>
           <a href='index.html' target='_blank'>Home</a> <br>
-    <div id="record_span" style="display:none">
+  </span>
+  <div id="record_span" style="display:none">
     <hr>
     <b>Audio recording: </b>
     <button id="recbutton" onclick="record_click(); return false">start</button>
