--- a/studio-21.html
+++ b/studio-21.html
@@ -16,7 +16,8 @@
     <ul>
     <video controls="" autoplay="" name="media"><source src="https://stream.studio21.ru/studio2196.aacp" type="audio/mp3"></video>
           <a href='index.html' target='_blank'>Home</a> <br>
-    <div id="record_span" style="display:none">
+  </span>
+  <div id="record_span" style="display:none">
     <hr>
     <b>Audio recording: </b>
     <button id="recbutton" onclick="record_click(); return false">start</button>
