--- a/donpollofm.html
+++ b/donpollofm.html
@@ -17,7 +17,8 @@
     <video controls="" autoplay="" name="media"><source src="https://stream.zeno.fm/dilmstb73pbtv" type="audio/mp3"></video>
           </script></a></li>
           <a href='index.html' target='_blank'>Home</a> <br>
-    <div id="record_span" style="display:none">
+  </span>
+  <div id="record_span" style="display:none">
     <hr>
     <b>Audio recording: </b>
     <button id="recbutton" onclick="record_click(); return false">start</button>
