--- a/smg4markerradio.html
+++ b/smg4markerradio.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <img src="SMG4_2023.png"><h2>SMG4 Radio beta</h2><h3></h3>
+        <img src="SMG4_2023.png"><h2>SMG4 Radio Tyumen (callsign:SMG4TYUMEN) </h2><h3></h3>
     </header>
     <div class="container">
 	    </div>
