--- a/smg4markerradio.html
+++ b/smg4markerradio.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@canary"></script>
     <ul>
     <video controls="" autoplay="" name="media"><source src="https://stream.zeno.fm/drhagg7ds1ltv" type="audio/mp3"></video>
-          <a href='radiostations.html' target='_blank'>Home</a> <br>
+          <a href='index.html' target='_blank'>Home</a> <br>
         
     </ul>
 </body>
