--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href='europaplusfm.html' target='_blank'>Europa Plus FM</a> <br>
 		<a href='RadioRecordDance.html' target='_blank'>Record Dance Radio</a> <br>
         <a href='RadioDacha.html' target='_blank'>Радио Дачв</a> <br>
+	<a href='smg4markerradio.html' target='_blank'>SMG4 Marker Radio</a> <br>
     </ul>
     <script>plausible('pageview', {
                 props: { next: `wasm=${!!window.WebAssembly}; m=${!!window.MediaSource || !!window.ManagedMediaSource}, hls=${!!document.createElement('video').canPlayType('application/vnd.apple.mpegURL')}, hev=${((window.MediaSource||window.ManagedMediaSource)?.isTypeSupported('video/mp4; codecs="hev1.1.6.L93.B0"') || (window.MediaSource||window.ManagedMediaSource)?.isTypeSupported('video/mp4; codecs="hev1"'))}`
